slight body color change

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="app.css"/>
 
 </head>
-<body>
+<body style="background: antiquewhite">
     <noscript>
         <h5>You must enable JavaScript to view this page!</h5>
     </noscript>
